force-app/main/default/objects/Holiday_Request__c/Holiday_Request__c.object-meta.xml
<CustomObject>
    <label>Holiday Request</label>
    <nameField>
        <displayFormat>HR-{0000000000}</displayFormat>
        <label>Holiday Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>