force-app/main/default/objects/Holiday_Request__c/fields/Annual_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Annual_Holiday__c</fullName>
    <label>Annual Holiday</label>
    <referenceTo>Annual_Holiday__c</referenceTo>
    <relationshipLabel>Holiday Requests</relationshipLabel>
    <relationshipName>Holiday_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>