force-app/main/default/objects/Holiday_Request__c/fields/Available_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Days__c</fullName>
    <formula>Annual_Holiday__r.Available_Days__c</formula>
    <inlineHelpText>This result comes from Total Holidays - Total Requested Approved Days. 
Take in account that other pending holiday request may exist in parallel.</inlineHelpText>
    <label>Available Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>