force-app/main/default/objects/Holiday_Request__c/fields/CC_Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>CC_Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Holiday Requests</relationshipLabel>
    <relationshipName>Holiday_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>