force-app/main/default/objects/Holiday_Request__c/fields/Employe_Name__c.field-meta.xml
<CustomField>
    <fullName>Employe_Name__c</fullName>
    <formula>Annual_Holiday__r.Owner:User.FirstName  &amp;  &quot; &quot; &amp; Annual_Holiday__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>