force-app/main/default/objects/Holiday_Request__c/fields/Holiday_Req_Status__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Req_Status__c</fullName>
    <label>Holiday Req Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>