force-app/main/default/objects/Holiday_Request__c/fields/Name_Status__c.field-meta.xml
<CustomField>
    <fullName>Name_Status__c</fullName>
    <formula>Employe_Name__c + &quot; (&quot; +  TEXT(Holiday_Req_Status__c)  + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name &amp; Status</label>
    <type>Text</type>
</CustomField>