force-app/main/default/objects/Holiday_Request__c/fields/Not_Yet_Approved_Days__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Approved_Days__c</fullName>
    <formula>Annual_Holiday__r.Not_Yet_Approved_Days__c</formula>
    <inlineHelpText>When looking at this field from an Holiday Request Approval record, be aware that this number is the sum of THIS record plus other PENDING requests</inlineHelpText>
    <label>Not Yet Approved Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>