force-app/main/default/objects/Holiday_Request__c/fields/Rejected_Days__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Days__c</fullName>
    <formula>Annual_Holiday__r.Rejected_Days__c</formula>
    <label>Rejected Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>