force-app/main/default/objects/Holiday_Request__c/fields/Requested_Days__c.field-meta.xml
<CustomField>
    <fullName>Requested_Days__c</fullName>
    <formula>(End_Date__c - Start_Date__c)+1</formula>
    <label>Requested Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>