force-app/main/default/objects/Holiday_Request__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>La primera vez que generes un Holiday Request, el registro se enviará automáticamente para aprobación a tu Manager. En caso de rechazo, si ajustas las fechas, deberás enviar para aprobación de forma manual.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>