force-app/main/default/objects/Holiday_Request__c/validationRules/Avoid_exceeding_Total_Holidays_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoid_exceeding_Total_Holidays_limit</fullName>
    <active>true</active>
    <errorConditionFormula>Annual_Holiday__r.Requested_Days__c +Requested_Days__c &gt;   Annual_Holiday__r.Total_Holidays__c</errorConditionFormula>
    <errorMessage>No puedes solicitar mas dias de los que tienes</errorMessage>
</ValidationRule>