force-app/main/default/objects/Holiday_Request__c/validationRules/Start_Time_Greater_than_End_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_Greater_than_End_Time</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date can&apos;t be less than Start date</errorMessage>
</ValidationRule>