force-app/main/default/objects/Holiday_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Annual_Holiday__c</columns>
    <columns>Available_Days__c</columns>
    <columns>Employe_Name__c</columns>
    <columns>End_Date__c</columns>
    <columns>Holiday_Req_Status__c</columns>
    <columns>Name_Status__c</columns>
    <columns>Not_Yet_Approved_Days__c</columns>
    <columns>Rejected_Days__c</columns>
    <columns>Requested_Days__c</columns>
    <columns>CC_Resource_Request__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>