force-app/main/default/objects/Holiday_Request__c/listViews/All_Company_Approved_Pending.listView-meta.xml
<ListView>
    <fullName>All_Company_Approved_Pending</fullName>
    <columns>NAME</columns>
    <columns>Name_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Requested_Days__c</columns>
    <columns>Available_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Holiday_Req_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval,Approved</value>
    </filters>
    <label>All Company Approved &amp; Pending</label>
</ListView>