force-app/main/default/objects/Holiday_Request__c/listViews/Approved_Holiday_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Holiday_Requests</fullName>
    <columns>NAME</columns>
    <columns>Employe_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Holiday_Req_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>This Year Approved Holidays</label>
</ListView>