force-app/main/default/objects/Holiday_Request__c/listViews/Developer_Team.listView-meta.xml
<ListView>
    <fullName>Developer_Team</fullName>
    <columns>NAME</columns>
    <columns>Name_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Requested_Days__c</columns>
    <columns>Available_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employe_Name__c</field>
        <operation>contains</operation>
        <value>Victor,Urdiain,Moruno,Oriol,Paco,Rubio,Aragón,Iñaki,Sosthene,Kevin</value>
    </filters>
    <filters>
        <field>Holiday_Req_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval,Approved</value>
    </filters>
    <label>Developer Team</label>
</ListView>